fix play on mobile

--- a/styles/cases.css
+++ b/styles/cases.css
@@ -292,7 +292,7 @@
     }
 
     .cases_mobile {
-        margin-bottom: 100px;
+        margin-bottom: 4dvh;
         width: 100%;
     }
 
